Update summary structure to include call arguments at the end

--- a/commands/sumcontext-en.toml
+++ b/commands/sumcontext-en.toml
@@ -122,5 +122,9 @@ The final text must:
 1. Be clear and immediately readable.
 2. Provide the reader with a quick understanding of the **essential points, decisions and implications**.
 3. Remain faithful to the actual content of the discussion.
+
+{{args}}
+
 """
+
 
