Update French  summary structure to add {{args}} at the end

--- a/commands/sumcontext-fr.toml
+++ b/commands/sumcontext-fr.toml
@@ -122,5 +122,9 @@ Le texte final doit :
 1. Être clair et immédiatement lisible.
 2. Donner au lecteur une compréhension rapide des **points essentiels, décisions et implications**.
 3. Rester fidèle au contenu réel de la discussion.
+
+{{args}}
+
 """
+
 
